<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>soos-sca</artifactId>
    <groupId>io.soos</groupId>
    <version>1.0.2</version>
  </parent>
  <artifactId>soos-sca-agent</artifactId>
  <packaging>jar</packaging>
  <dependencies>
    
    <dependency>
      <groupId>io.soos</groupId>
      <artifactId>soos-sca-common</artifactId>
      <version>1.0.2</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains.teamcity</groupId>
      <artifactId>agent-api</artifactId>
      <version>${teamcity-version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains.teamcity</groupId>
      <artifactId>tests-support</artifactId>
      <version>${teamcity-version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.soos</groupId>
      <artifactId>sca</artifactId>
      <version>1.0.4</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>
</project>
